--- a/kayitol.html
+++ b/kayitol.html
@@ -10,7 +10,7 @@
             margin: 0px;
             padding: 0px;
             box-sizing: border-box;
-        }
+        }iii
         body{
             background: url(img/küçükkapak.jpg);
             background-position: center;
@@ -59,5 +59,6 @@
             </div>
         </form>
     </div>    
+    
 </body>
 </html>
