--- a/giris.html
+++ b/giris.html
@@ -59,7 +59,7 @@
         </div>
         <div class="d-grid gap-2">
           <button class="btn btn-primary" type="button">Giriş Yap</button>
-          <p>hesabınızmı yok mu? <a href="kayıtol.html">buradan kaydolun?</a></p>
+          <p>hesabınızmı yok mu? <a href="kayitol.html">buradan kaydolun?</a></p>
         </div>
       </form>
     </div>
