--- a/musteri.html
+++ b/musteri.html
@@ -37,7 +37,9 @@
             padding: 10px;
             width: 100%;
             margin-top: 10px;
-            
+        }
+        .select2{
+            margin: 10px  0px;
         }
         .randv-al .btnOn{
             padding: 10px 0px;
@@ -91,9 +93,18 @@
         <select class="form-select" aria-label="Default select example">
             <option selected id="kuaför">Kuaförler</option>
             <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
         </select>
+        <select class="form-select select2" aria-label="Default select example">
+            <option selected id="islem">İşlem Seçiniz</option>
+            <option value="1">Saç kesimi</option>
+            <option value="1">Saç boyama</option>
+            <option value="1">Sakal tıraşı</option>
+            <option value="1">Cilt Bakım</option>
+            <option value="1">Karışık</option>
+        </select>
+
+        <input type="text" placeholder="açıklama ekleyebilirsiniz" style="height: 100px;">
+
         <button type="submit" class="btnOn" onclick="Onayla()">Onayla</button>
     </div>
 
