--- a/admin.html
+++ b/admin.html
@@ -4,39 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="admin.css">
-    <title>Document</title>
+    <title>Admin</title>
+    <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+        body{
+            background-color: antiquewhite;
+            background-position: center;
+            background-size: cover;
+            height: 100vh;
+            backdrop-filter: blur();
+            opacity: ;
+        }
+        .admin-panel{
+            position: absolute;
+                top: 50%;
+                left: 50%;
+            transform: translate(-50%,-50%);   
+            border: 2px solid #333; 
+            padding: 120px 90px;
+            border-radius: 25px;
+           
+        }
+        .admin-panel h1{
+            position: absolute;
+            top: 20px;
+            color: #333;
+            font-weight: bold;
+        }
+        .kuaföradı{
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div class="container right-panel-active">
-        <div class="container__form container--signup">
-            <form action="" class="form" id="form1">
-                <h2 class="form__title">Kayıt Ol</h2>
-                <input type="text" placeholder="Kullanıcı" class="input">
-                <input type="email" placeholder="E-Posta" class="input">
-                <input type="password" placeholder="Şifre" class="input">
-                <button class="btn">Kayıt Ol</button>
-            </form>
-        </div>
-        <div class="container__form container--signin">
-            <form action="" class="form" id="form1">
-                <h2  class="form__title">Giriş Yap</h2>
-                <input type="email" placeholder="E-Posta" class="input">
-                <input type="password" placeholder="Şifre" class="input">
-                <button class="btn">Giriş Yap</button>
-            </form>
-        </div>
-
-        <div class="container__overlay">
-            <div class="overlay">
-                <div class="overlay__panel overlay--left">
-                    <button class="btn" id="signIn">Giriş Yap</button>
-                </div>
-                <div class="overlay__panel overlay--right">
-                    <button class="btn" id="signUp">Kayıt Ol</button>
-                </div>
-            </div>
-        </div>
+    <div class="admin-panel">
+        <h1>Kuaför Yönetim Paneli</h1> 
+       <form id="KuaförForm">
+        <label for="KuaförAdı" class="kuaföradı">Kuaför Adı: </label>
+        <input type="text" id="KuaförAdı" name="KuaförAdı">
+        <button type="submit" onclick="ekleKuaför()">Kuaför Ekle</button>
+       </form>
     </div>
-    
+    <div class="kuaförListesi">
+        <!-- Kuaför listesi burada görünecek -->
+    </div>
 </body>
 </html>
