kuaför sayfası eklendi

--- a/kuafor.html
+++ b/kuafor.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        body {
+    font-family: 'Arial', sans-serif;
+    margin: 20px;
+    background-color:lemonchiffon;
+    }
+
+    header {
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+    }
+
+    section {
+        margin-top: 20px;
+    }
+
+    button {
+        padding: 8px;
+        cursor: pointer;
+    }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Kuaför Yönetim Paneli</h1>
+    </header>
+    
+    <section id="workingHours">
+        <h2>Çalışma Saatleri</h2>
+        <p id="workingHoursText">Çalışma saatleri henüz tanımlanmamış.</p>
+        <button onclick="defineWorkingHours()">Çalışma Saatlerini Tanımla</button>
+    </section>
+
+    <section id="appointmentRequests">
+        <h2>Randevu İstekleri</h2>
+        <ul id="appointmentList">
+            <!-- Randevu istekleri burada listelenecek -->
+        </ul>
+    </section>
+
+    <script src="kuaför.js"></script>
     
 </body>
 </html>
