kuaför paneli güncellendi

--- a/musteri.html
+++ b/musteri.html
@@ -75,7 +75,7 @@
                      Randevularım
                     </button>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#"></a></li>
                     </ul>
                   </div>
             </nav>
@@ -97,15 +97,15 @@
         <select class="form-select select2" aria-label="Default select example">
             <option selected id="islem">İşlem Seçiniz</option>
             <option value="1">Saç kesimi</option>
-            <option value="1">Saç boyama</option>
-            <option value="1">Sakal tıraşı</option>
-            <option value="1">Cilt Bakım</option>
-            <option value="1">Karışık</option>
+            <option value="2">Saç boyama</option>
+            <option value="3">Sakal tıraşı</option>
+            <option value="4">Cilt Bakım</option>
+            <option value="5">Karışık</option>
         </select>
 
-        <input type="text" placeholder="açıklama ekleyebilirsiniz" style="height: 100px;">
+        <input type="text" id="aciklama" placeholder="açıklama ekleyebillirsiniz" style="height: 100px;" maxlength="100">
 
-        <button type="submit" class="btnOn" onclick="Onayla()">Onayla</button>
+        <button type="submit" class="btnOn" id="onbtn" onclick="Onayla()">Onayla</button>
     </div>
 
 
